Fix word wrap on poll results

--- a/app/assets/stylesheets/custom/custom.scss
+++ b/app/assets/stylesheets/custom/custom.scss
@@ -109,3 +109,7 @@ h1 {
 .poll-question .button {
   width: 100%;
 }
+
+.polls-results-stats table th {
+  word-wrap: break-word;
+}
